# apoc-firefox-adapter

./: ChangeLog  autogen.sh  configure.ac
contrib/: Makefile.in.extension  mozApoc.spec
src/: Makefile.am  mozApocModule.cpp  mozApocNotificationDispatch.h  mozApocNotificationImpl.cpp  mozApocNotificationImpl.h  mozApocPAPI.cpp  mozApocPAPI.h  mozApocPathParser.cpp  mozApocPathParser.h  mozApocPolicyBackend.cpp  mozApocPolicyBackend.h  mozApocPolicyComponentDOMData.cpp  mozApocPolicyComponentDOMData.h  mozApocPolicyComponentData.cpp  mozApocPolicyComponentData.h  mozApocPolicyData.cpp  mozApocPolicyData.h  mozApocPolicyModel.cpp  mozApocPolicyModel.h  mozApocPolicyModelBuilder.cpp  mozApocPolicyModelBuilder.h  mozApocPolicyModelFromDOM.cpp  mozApocPolicyModelFromDOM.h  mozApocPolicyModelFromXML.cpp  mozApocPolicyModelFromXML.h  mozApocPolicyNodeAttributes.h  mozApocPolicyNodeDOMData.cpp  mozApocPolicyNodeDOMData.h  mozApocPolicyNodeData.cpp  mozApocPolicyNodeData.h  mozApocPrefBranch.cpp  mozApocPrefBranch.h  mozApocPrefService.cpp  mozApocPrefService.h  mozApocSaxHandler.h  mozApocSaxWrapper.cpp  mozApocSaxWrapper.h  mozApocStringList.cpp  mozApocStringList.h  mozApocXML.h
src/papi/: papi.h  papiTypes.h  papidecl.h  papilib.c  papilib.h
